urls and home file changed for mark-in and mark-out

--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@
             <h2>Automated Attendance <em>Management</em> System <em>Using Facial Recognition</em></h2>
             <div class="buttons">
               <div class="big-border-button">
-                <a class="button btn btn-primary" id="markattendance" href='/camera_view_in/'>Mark Attendance</a>
+                <a class="button btn btn-primary" id="markattendance" href='/mark_attendance_in/'>Mark Attendance</a>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
             <img src="{% static 'recognition/img/att.png' %}" alt="" style="width: 200px; height: 200px; border-bottom: px solid #00000000;">
             <h4 class="text-white">Mark Your Attendance-In</h4>
             <div class="border-button">
-              <a href='/camera_view_in/'>Let's Go</a>
+              <a href='/mark_attendance_in/'>Let's Go</a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
           <img  src="{% static 'recognition/img/outw.png' %}" alt="" style="width: 280px; height: 200px; border-bottom: px solid #00000000; ">
           <h4 class="text-white">Mark Your Attendance-Out</h4>
             <div class="border-button">
-              <a href='/camera_view_out/'>Let's Go</a>
+              <a href='/mark_attendance_out/'>Let's Go</a>
             </div>
           </div>
         </div>
