--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,19 @@
       </li>
     </ul>
   </nav>
-    
+  
+  {% for message in messages %}
+    <div class="container-fluid p-0">
+      <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="True">&times;</span>
+        </button>
+        {{ message }}
+      </div>
+    </div>
+  {% endfor %}
+
+
   <div class="main-banner">
     <div class="container">
       <div class="row">
